--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "build": "webpack --mode development"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
