--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "food-ordering",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode development"
+    "start:webpack": "webpack-dev-server --mode development --open --hot",
+    "start": "nodemon --exec babel-node server/index.js",
+    "build": "webpack --watch --mode development"
   },
   "dependencies": {
+    "@babel/runtime": "^7.18.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "uuid": "^8.3.2",
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.0",
+    "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
