--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.5.1",
     "babel-jest": "^28.1.0",
